[gd_scene load_steps=4 format=3 uid="uid://b42iy8pn7fufn"]

[ext_resource type="Script" path="res://Scripts/Slime.gd" id="1_4tkln"]
[ext_resource type="PackedScene" uid="uid://bxkrh54se6qce" path="res://Scripts/EnemyBase.tscn" id="1_e48jv"]
[ext_resource type="Texture2D" uid="uid://ce4kou7qtsfrs" path="res://Sprites/EnemySprites/Slime/SlimeMove4.png" id="8_qfdvc"]

[node name="Slime" type="Node2D"]
script = ExtResource("1_4tkln")

[node name="EnemyBase" parent="." instance=ExtResource("1_e48jv")]

[node name="CollisionShape2D" parent="EnemyBase/Hurtbox" index="0"]
position = Vector2(0, -1.75)
debug_color = Color(0.2, 0.513726, 1, 0.419608)

[node name="Status" parent="EnemyBase" index="1"]
timerLength = 10

[node name="EnemySprite" parent="EnemyBase" index="2"]
position = Vector2(0, -4.76837e-07)
rotation = 1.5708
scale = Vector2(5, 5)
texture = ExtResource("8_qfdvc")

[connection signal="enemy_base_destroyed" from="EnemyBase" to="." method="_on_enemy_base_enemy_base_destroyed"]
[connection signal="status_slow" from="EnemyBase/Status" to="." method="_on_status_status_slow"]

[editable path="EnemyBase"]
[editable path="EnemyBase/Hurtbox"]
